--- a/package.json
+++ b/package.json
@@ -2,37 +2,51 @@
   "name": "audiobookbay",
   "version": "2.0.6",
   "description": "AudioBookBay Scraper JavaScript",
-  "main": "dist/index.js",
-  "types": "dist",
-  "keywords": [
-    "audiobookbay",
-    "audiobook",
-    "torrent",
-    "javascript"
-  ],
-  "scripts": {
-    "build": "rm -rf dist && tsc -p .",
-    "test": "vitest",
-    "example": "esno ./playground/usage-example.ts",
-    "coverage": "vitest run --coverage"
-  },
-  "author": "Valentin Lica",
   "license": "ISC",
+  "author": "Valentin Lica",
   "repository": {
     "type": "git",
     "url": "https://github.com/licavalentin/audiobookbay"
   },
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "scripts": {
+    "build": "tsup",
+    "coverage": "vitest run --coverage",
+    "example": "esno ./playground/usage-example.ts",
+    "test": "vitest"
+  },
   "dependencies": {
-    "@types/cheerio": "^0.22.31",
-    "@types/node-fetch": "^2.6.2",
-    "cheerio": "^1.0.0-rc.12",
-    "node-fetch": "^3.2.10"
+    "cheerio": "^1.0.0",
+    "isomorphic-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "esno": "*",
-    "picocolors": "^1.0.0",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vitest": "^0.22.1"
-  }
+    "@types/cheerio": "^0.22.35",
+    "@types/node-fetch": "^2.6.12",
+    "esno": "^4.8.0",
+    "picocolors": "^1.1.1",
+    "prettier": "^3.5.1",
+    "tsup": "^8.3.6",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.6"
+  },
+  "keywords": [
+    "audiobook",
+    "audiobookbay",
+    "javascript",
+    "torrent"
+  ]
 }
