--- a/package.json
+++ b/package.json
@@ -23,23 +23,30 @@
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup",
     "coverage": "vitest run --coverage",
-    "example": "esno ./playground/usage-example.ts",
+    "example": "tsx ./playground/usage-example.ts",
     "test": "vitest"
   },
   "dependencies": {
     "cheerio": "^1.0.0",
+    "filesize-parser": "^1.5.1",
+    "html-to-text": "^9.0.5",
     "isomorphic-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
+    "@types/filesize-parser": "^1.5.3",
+    "@types/html-to-text": "^9.0.4",
     "@types/node-fetch": "^2.6.12",
-    "esno": "^4.8.0",
     "picocolors": "^1.1.1",
     "prettier": "^3.5.1",
     "tsup": "^8.3.6",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "vitest": "^3.0.6"
   },
