--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "audiobookbay",
+  "name": "@book-tools/audiobookbay",
   "version": "2.0.6",
-  "description": "AudioBookBay Scraper JavaScript",
+  "description": "AudioBookBay Javascript API",
   "license": "ISC",
-  "author": "Valentin Lica",
+  "author": "Chris Sandvik",
   "repository": {
     "type": "git",
-    "url": "https://github.com/licavalentin/audiobookbay"
+    "url": "https://github.com/book-tools/audiobookbay"
   },
   "exports": {
     ".": {
@@ -43,6 +43,7 @@
     "@types/filesize-parser": "^1.5.3",
     "@types/html-to-text": "^9.0.4",
     "@types/node-fetch": "^2.6.12",
+    "@vitest/coverage-v8": "^3.0.6",
     "picocolors": "^1.1.1",
     "prettier": "^3.5.1",
     "tsup": "^8.3.6",
